Finished pass to make titles all the same.

--- a/TypeCheckerGenerator/latex/Rules.tex
+++ b/TypeCheckerGenerator/latex/Rules.tex
@@ -954,7 +954,7 @@ a pattern that contains no places.
 \AgdaBound{δ}\AgdaSpace{}%
 \AgdaBound{prems}\<%
 \end{code}}
-\section{Typing Rules}
+\section{Typing rules}
 \label{section-rules}
 
 A TypeRule is used to establish the conditions under which a piece
