--- a/TypeCheckerGenerator/latex/Test/BetaTest.tex
+++ b/TypeCheckerGenerator/latex/Test/BetaTest.tex
@@ -499,11 +499,13 @@
 \\
 %
 \>[2]\AgdaFunction{test2}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[263I]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaFunction{etarules}\AgdaSpace{}%
-\AgdaFunction{betarules}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaFunction{betarules}\<%
+\\
+\>[.][@{}l@{}]\<[263I]%
+\>[10]\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaFunction{rules}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaFunction{PC}\AgdaSymbol{)}\AgdaSpace{}%
@@ -544,11 +546,13 @@
 \\
 %
 \>[2]\AgdaFunction{test3}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[286I]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaFunction{etarules}\AgdaSpace{}%
-\AgdaFunction{betarules}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaFunction{betarules}\<%
+\\
+\>[.][@{}l@{}]\<[286I]%
+\>[10]\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaFunction{rules}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaFunction{PC}\AgdaSymbol{)}\AgdaSpace{}%
@@ -599,15 +603,17 @@
 \\
 %
 \>[2]\AgdaFunction{test4}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[319I]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaFunction{etarules}\AgdaSpace{}%
 \AgdaFunction{betarules}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaFunction{rules}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaFunction{PC}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{ε}\AgdaSpace{}%
+\AgdaFunction{PC}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[319I]%
+\>[10]\AgdaSymbol{(}\AgdaInductiveConstructor{ε}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{α}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇨}}\AgdaSpace{}%
@@ -642,12 +648,12 @@
 \\
 %
 \>[2]\AgdaSymbol{\AgdaUnderscore{}}%
-\>[355I]\AgdaSymbol{=}\AgdaSpace{}%
+\>[352I]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[.][@{}l@{}]\<[355I]%
+\>[.][@{}l@{}]\<[352I]%
 \>[4]\AgdaComment{-- should normalize under a binder}\<%
 \\
 %
@@ -660,11 +666,13 @@
 \\
 %
 \>[2]\AgdaFunction{test5}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[358I]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaFunction{etarules}\AgdaSpace{}%
-\AgdaFunction{betarules}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaFunction{betarules}\<%
+\\
+\>[.][@{}l@{}]\<[358I]%
+\>[10]\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaFunction{rules}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaFunction{PC}\AgdaSymbol{)}\AgdaSpace{}%
@@ -712,11 +720,13 @@
 \\
 %
 \>[2]\AgdaFunction{test6}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[388I]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaFunction{etarules}\AgdaSpace{}%
-\AgdaFunction{betarules}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaFunction{betarules}\<%
+\\
+\>[.][@{}l@{}]\<[388I]%
+\>[10]\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaFunction{rules}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaFunction{PC}\AgdaSymbol{)}\AgdaSpace{}%
@@ -728,8 +738,10 @@
 \AgdaFunction{α}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{app}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaInductiveConstructor{ze}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\AgdaSymbol{)}\<%
+\\
+%
+\>[10]\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{app}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{lam}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{\textasciitilde{}}\AgdaSpace{}%
@@ -773,19 +785,23 @@
 \\
 %
 \>[2]\AgdaFunction{test7}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[426I]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaFunction{etarules}\AgdaSpace{}%
-\AgdaFunction{betarules}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaFunction{betarules}\<%
+\\
+\>[.][@{}l@{}]\<[426I]%
+\>[10]\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaFunction{rules}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaFunction{PC}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{ε}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
 \AgdaFunction{α}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaFunction{α}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{app}\AgdaSpace{}%
+\AgdaFunction{α}\<%
+\\
+%
+\>[10]\AgdaSymbol{(}\AgdaFunction{app}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{app}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{lam}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{\textasciitilde{}}\AgdaSpace{}%
@@ -829,17 +845,21 @@
 \\
 %
 \>[2]\AgdaFunction{test8}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[461I]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaFunction{etarules}\AgdaSpace{}%
-\AgdaFunction{betarules}%
-\>[472I]\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaFunction{betarules}\<%
+\\
+\>[.][@{}l@{}]\<[461I]%
+\>[10]\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaFunction{rules}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaFunction{PC}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaInductiveConstructor{ε}\AgdaSpace{}%
-\AgdaFunction{α}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{app}\AgdaSpace{}%
+\AgdaFunction{α}\<%
+\\
+%
+\>[10]\AgdaSymbol{(}\AgdaFunction{app}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{lam}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{app}\AgdaSpace{}%
@@ -853,8 +873,8 @@
 \AgdaOperator{\AgdaFunction{⇨}}\AgdaSpace{}%
 \AgdaFunction{α}\AgdaSymbol{))}\<%
 \\
-\>[472I][@{}l@{\AgdaIndent{0}}]%
-\>[44]\AgdaSymbol{(}\AgdaFunction{lam}\AgdaSpace{}%
+%
+\>[10]\AgdaSymbol{(}\AgdaFunction{lam}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{\textasciitilde{}}\AgdaSpace{}%
 \AgdaInductiveConstructor{ze}\AgdaSymbol{)))}\<%
 \\
@@ -885,11 +905,13 @@
 \\
 %
 \>[2]\AgdaFunction{test9}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{normalize}\AgdaSpace{}%
+\AgdaSymbol{=}%
+\>[493I]\AgdaFunction{normalize}\AgdaSpace{}%
 \AgdaFunction{etarules}\AgdaSpace{}%
-\AgdaFunction{betarules}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
+\AgdaFunction{betarules}\<%
+\\
+\>[.][@{}l@{}]\<[493I]%
+\>[10]\AgdaSymbol{((}\AgdaFunction{infer}\AgdaSpace{}%
 \AgdaFunction{rules}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaFunction{PC}\AgdaSymbol{)}\AgdaSpace{}%
