--- a/TypeCheckerGenerator/latex/Test/EtaTest.tex
+++ b/TypeCheckerGenerator/latex/Test/EtaTest.tex
@@ -102,12 +102,16 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{η-match}\AgdaSpace{}%
-\AgdaFunction{lam-ηrule}\AgdaSpace{}%
-\AgdaFunction{test1type}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[52I]\AgdaFunction{η-match}%
+\>[53I]\AgdaFunction{lam-ηrule}\AgdaSpace{}%
+\AgdaFunction{test1type}\<%
+\\
+\>[.][@{}l@{}]\<[53I]%
+\>[12]\AgdaOperator{\AgdaDatatype{≡}}\<%
+\\
+\>[52I][@{}l@{\AgdaIndent{0}}]%
+\>[5]\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaInductiveConstructor{thing}\AgdaSpace{}%
 \AgdaFunction{α}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
@@ -123,13 +127,17 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{η-expand}\AgdaSpace{}%
-\AgdaFunction{lam-ηrule}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[65I]\AgdaFunction{η-expand}%
+\>[66I]\AgdaFunction{lam-ηrule}\AgdaSpace{}%
 \AgdaFunction{test1type}\AgdaSpace{}%
-\AgdaFunction{test1}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaFunction{lam}\AgdaSpace{}%
+\AgdaFunction{test1}\<%
+\\
+\>[.][@{}l@{}]\<[66I]%
+\>[13]\AgdaOperator{\AgdaDatatype{≡}}\<%
+\\
+\>[65I][@{}l@{\AgdaIndent{0}}]%
+\>[5]\AgdaFunction{lam}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaFunction{test1}\AgdaSpace{}%
@@ -196,12 +204,16 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{η-match}\AgdaSpace{}%
-\AgdaFunction{lam-ηrule}\AgdaSpace{}%
-\AgdaFunction{test2type}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[106I]\AgdaFunction{η-match}%
+\>[107I]\AgdaFunction{lam-ηrule}\AgdaSpace{}%
+\AgdaFunction{test2type}\<%
+\\
+\>[.][@{}l@{}]\<[107I]%
+\>[12]\AgdaOperator{\AgdaDatatype{≡}}\<%
+\\
+\>[106I][@{}l@{\AgdaIndent{0}}]%
+\>[5]\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaInductiveConstructor{thing}\AgdaSpace{}%
 \AgdaFunction{α}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
@@ -217,13 +229,17 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{η-expand}\AgdaSpace{}%
-\AgdaFunction{lam-ηrule}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[119I]\AgdaFunction{η-expand}%
+\>[120I]\AgdaFunction{lam-ηrule}\AgdaSpace{}%
 \AgdaFunction{test2type}\AgdaSpace{}%
-\AgdaFunction{test2}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaFunction{lam}\AgdaSpace{}%
+\AgdaFunction{test2}\<%
+\\
+\>[.][@{}l@{}]\<[120I]%
+\>[13]\AgdaOperator{\AgdaDatatype{≡}}\<%
+\\
+\>[119I][@{}l@{\AgdaIndent{0}}]%
+\>[5]\AgdaFunction{lam}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{↞↞}\AgdaSpace{}%
