--- a/TypeCheckerGenerator/latex/Test/STLCTest.tex
+++ b/TypeCheckerGenerator/latex/Test/STLCTest.tex
@@ -102,7 +102,7 @@
 \\
 %
 \>[4]\AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaString{"failed ∋-check: α→α ∋ α"}\<%
+\AgdaString{"failed ∋-check: α → α is not the type of α"}\<%
 \\
 \>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -319,7 +319,7 @@
 \\
 %
 \>[4]\AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaString{"failed ∋-check: β ∋ a"}\<%
+\AgdaString{"failed ∋-check: β is not the type of a"}\<%
 \\
 \>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -352,7 +352,7 @@
 \\
 %
 \>[4]\AgdaInductiveConstructor{fail}\AgdaSpace{}%
-\AgdaString{"failed ∋-check: α ∋ b"}\<%
+\AgdaString{"failed ∋-check: α is not the type of b"}\<%
 \\
 \>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
