--- a/report/appendices.tex
+++ b/report/appendices.tex
@@ -1,6 +1,6 @@
 \begin{appendices}
 
-\section {Typing Rules}
+\section {Typing rules}
 
 \subsection {System F}
 \label{appendix:sysFrules}
@@ -131,13 +131,13 @@ The latter three rules are the ones that capture the idea of
 Hindley-Milner polymorphism.
 
 \clearpage
-\section{Example Specifications}
+\section{Example specifications}
 \label{appendix:examplespecifications}
 
 This appendix shows example specification files for various
 languages.
 
-\subsection{Simply Typed Lambda Calculus with Product Types}
+\subsection{Simply typed lambda calculus with product types}
 \label{STLCspec}
 
 \begin{verbatim}
@@ -179,7 +179,7 @@ type: A x B
 \end{verbatim}
 
 \clearpage
-\subsection{System-F-like language }
+\subsection{System-F-like language}
 \label{SystemFspec}
 
 Our variation is slighly more general than the original encoding as
@@ -221,7 +221,7 @@ type: ∀ T. => M
 \end{verbatim}
 
 \clearpage
-\subsection{Lambda Calculus Variation with Dependent Types}
+\subsection{Lambda calculus variation with dependent types}
 \label{DTLCspec}
 
 \begin{verbatim}
@@ -253,7 +253,7 @@ type: A X. -> B
   expanded-by: \ Y. -> Y
 \end{verbatim}
 \clearpage
-\section{Parser Combinators}
+\section{Parser combinators}
 \label{appendix-parsercombinators}
 
 \begin{verbatim}
@@ -510,7 +510,7 @@ squarebracketed p = do
 \subsection{Type checking STLC}
 \input{../../TypeCheckerGenerator/latex/Test/STLCTest.tex}
 \clearpage
-\section{Lattice Meet/Join Algorithms}
+\section{Lattice meet/join algorithms}
 \label{appendix-joinalgorithms}
 
 We simplify these algorithms by ignoring scope, in practice we would
