Finished whole edit

--- a/TypeCheckerGenerator/latex/CoreLanguage.tex
+++ b/TypeCheckerGenerator/latex/CoreLanguage.tex
@@ -47,7 +47,7 @@
 First we introduce the concept of scope and what it means to be
 scoped. In our system, all variables are de-bruijn indexed and our
 scope can be represented by a single natural number. We take 0 to
-mean nothing in scope, 1 to mean a single thing in scope etc. A
+mean nothing in scope, 1 to mean a single thing in scope and so on. A
 scoped entity is one which is defined in terms of a scope.
 
 \begin{code}%
