--- a/TypeCheckerGenerator/latex/EtaRule.tex
+++ b/TypeCheckerGenerator/latex/EtaRule.tex
@@ -119,8 +119,8 @@
 \end{code}
 }
 
-Later we will show how we might fully normalize a term using a technique
-known as normalization by evaluation. In order to do this, we will find
+Later we will show how we might fully normalise a term using a technique
+known as normalisation by evaluation. In order to do this, we will find
 that we require the ability to perform $η$-expansion and so we provide a
 rule to help us achieve this.
 
