--- a/TypeCheckerGenerator/latex/LanguageParser.tex
+++ b/TypeCheckerGenerator/latex/LanguageParser.tex
@@ -209,7 +209,7 @@ representation in our internal syntax and so we build a second parser for this
 purpose.
 
 We use the patterns in our type rules and ∋ rules in order to detemine valid
-constructions in the language and then use these patterms to guide our parsing,
+constructions in the language and then use these patterns to guide our parsing,
 however we must first overcome one major problem.
 
 A user is perfectly able to have some \emph{place} as the first part of a pattern.
