--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -337,8 +337,9 @@ generate a term from from pattern $p$ and its associated $p\mbox{-Env}$
 \AgdaBound{θ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{-Env}}\<%
 \end{code}
-We define the γ opening of a pattern by recursing structurally and prepending
-the thinning by the identity thinning length $γ$.
+We define the γ opening of a pattern by recursing structurally until we reach
+some \emph{palce} and prepending the thinning by the identity thinning length 
+$γ$.
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1262,7 +1263,7 @@ validity of a schematic variable with regards to its pattern.
 We define a few less interesting but critical utility functions for later
 use. We give a means to remove a place from a pattern, replacing it with
 a trivial atom. Similarly we extend the same functionality to environments.
-We are also define how a term might be build from a pattern and some fitting
+We also provide the means to build a term from a pattern and some appropriate
 environment.
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}-\AgdaUnderscore{}}}%
@@ -1870,7 +1871,7 @@ environment.
 \end{code}
 }
 We will later find it useful to traverse a pattern and build a potential svar
-'on the way down' so that when we get to a $place$ we have the svar
+'on the way down' so that when we reach a $place$ we have the svar
 that refers to it and so we construct a type to help us.
 
 The notion is that instead of encoding some path to a $place$ in the pattern,
