--- a/TypeCheckerGenerator/latex/Rules.tex
+++ b/TypeCheckerGenerator/latex/Rules.tex
@@ -226,7 +226,7 @@ a place in the pattern as 'trusted'. In our implementation of premise, $p$ is
 some pattern that identifies places that we already trust while $q$ is the
 pattern of untrusted places. The premise establishes trust in some $p'$ and
 shows what remains untrusted with $q'$. While we can encode various checks with
-our premise, only two increase the accumulated trust: either a statement that
+our premises, only two increase the accumulated trust: either a statement that
 some \emph{place} is a type, or a statement that it is \emph{of} some type.
 
 In the definition of formal rules we cannot refer to arbitrary
