--- a/TypeCheckerGenerator/latex/Substitution.tex
+++ b/TypeCheckerGenerator/latex/Substitution.tex
@@ -179,7 +179,7 @@ composition of substitutions.
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{σ'}\<%
 \end{code}
-Here we have paid attention to the types in particular to aid readability of
+Here we have paid attention to the types to aid the readability of
 later definitions. This can be seen in the type of our final definition here
 which states that if some $T$ is substitutable, then we are able to compose
 the subsitutions.
