--- a/TypeCheckerGenerator/latex/Thinning.tex
+++ b/TypeCheckerGenerator/latex/Thinning.tex
@@ -191,10 +191,11 @@ denoted $δ ⊑ γ$ where they are embed some scope $δ$ into another
 scope $γ$ and as such it must be that $δ \leq γ$.
 
 Some thinning $δ ⊑ γ$ can be represented a a bit-vector $γ$ digits long where
-each digit identifies what is 'new' in $γ$. A thinning may also be interpreted
-as a selection from some scope $γ$, and we may use singleton thinnings in order
-to represent variables in this way. Our implementation maintains the $δ \leq γ$
-invariant by construction and is shown here.
+each digit might be $0$ indicating that the variable is new in $γ$ or $I$
+indicating that it previously existed in $δ$. A thinning may also be interpreted
+as a selection from some scope $γ$, and we may use singleton thinnings in
+order to represent variables in this way. Our implementation maintains the
+$δ \leq γ$ invariant by construction and is shown here.
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
@@ -217,11 +218,9 @@ invariant by construction and is shown here.
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}O}}%
 \>[6]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{θ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
@@ -231,11 +230,9 @@ invariant by construction and is shown here.
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}I}}%
 \>[6]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{θ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
-\AgdaGeneralizable{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
@@ -682,9 +679,9 @@ somehow narrow the scope.
 
 There are many scoped entities that we will wish a thinning to act on,
 and so we adopt the convention that all functions detailing an action
-of thinnings take the form begin with "⟨" with the exception of the
-action of a thinning on another thinning which equates to composition
-and so we use the more traditional $∘$ notation.
+of thinnings begin with "⟨" except the action of a thinning on another
+thinning which equates to composition and so we use the more traditional
+$∘$ notation.
 
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}∘\AgdaUnderscore{}}}%
